mobile fix overflow

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -485,6 +485,7 @@ button {
   background: $primary-color;
   width: 80vw;
   height: 60vh;
+  overflow: hidden;
 }
 
 .modal-content {
